2016-04-03 belangeo <belangeo@gmail.com>

    *  Added new object: Exp, calculates the value of e to the power of x.

2016-04-02 belangeo <belangeo@gmail.com>

    *  Revision, clean-up and optimization of various filters in the library.
    (Biquad, Biquadx, Port, Tone, Atone, Allpass, Allpass2, Phaser, BandSplit MoogLP).

2016-03-28 belangeo <belangeo@gmail.com>

    *  Added new object: FastSine, two fast sin approximations (faster than linear table lookup).

2016-03-27 belangeo <belangeo@gmail.com>

    *  Added new function : getPyoKeywords, returns the list of pyo keywords (classes and functions).

2016-03-26 belangeo <belangeo@gmail.com>

    *  Added an argument arg to the Pattern object.

2016-03-23 belangeo <belangeo@gmail.com>

    *  Added setExp() method to Fader, Adsr, MidiAdsr and MidiDelAdsr, allowing
    the creation of exponential or logarithmic envelopes.

2016-03-18 belangeo <belangeo@gmail.com>

    *  Added new object: MoogLP, 24dB/oct resonant lowpass filter.

2016-03-16 belangeo <belangeo@gmail.com>

    *  Added new object: ChenLee, another chaotic attractor based on the Chen-Lee system.

2016-03-16 belangeo <belangeo@gmail.com>

    *  Added new object: PadSynthTable, a beautiful algorithm from Nasca Octavian Paul.

2016-03-13 belangeo <belangeo@gmail.com>

    *  Added rotate and copyData methods to the PyoTableObject.

2016-03-12 belangeo <belangeo@gmail.com>

    *  Fixed TableWrite writing pointer in the table. Added a mode attribute
    to select between normalized (0->1) or raw (samples) position.

2016-03-01 belangeo <belangeo@gmail.com>

    * Final revision for version 0.7.9.
    - SHA: 7ddbeacd14cd78ce4930c845a82745bb58f4a26c

2016-03-01 belangeo <belangeo@gmail.com>

    *  Upgraded version number to 0.7.9.

2016-03-01 belangeo <belangeo@gmail.com>

    *  Pyo now uses its own PRNG to avoid conflicts with other libs or 
    modules that use rand()/srand() in the same process. This fixed the 
    Server's global seed behaviour.
