@@ -1,3 +1,7 @@
+2016-04-29 belangeo <belangeo@gmail.com>
+
+    *  Added a quality factor everywhere a FLAC or OGG sound file can be saved on disk.
+
 2016-04-03 belangeo <belangeo@gmail.com>
 
     *  Added new object: Exp, calculates the value of e to the power of x.
